--- a/sim.html
+++ b/sim.html
@@ -1,9 +1,9 @@
 <html>
     <head>
-        <script src="proximity.json" type="text/javascript"></script>
-        <script src="first.json" type="text/javascript"></script>
+        
     </head>
     <canvas style="border:3px black solid;" id="sim_canvas1" width="1000" height="1000"></canvas>
     <canvas style="border:3px black solid;" id="sim_canvas2" width="1000" height="1000"></canvas>
+    <script src="sim.js" type="text/javascript"></script>
     <script src="viz.js" type="text/javascript"></script>
 </html>
