--- a/sim.html
+++ b/sim.html
@@ -1,9 +1,25 @@
 <html>
     <head>
-        
+
     </head>
-    <canvas style="border:3px black solid;" id="sim_canvas1" width="1000" height="1000"></canvas>
-    <canvas style="border:3px black solid;" id="sim_canvas2" width="1000" height="1000"></canvas>
+    <table>
+        <tr>
+            <td><h2>Agent 1</h2><p id="strat1"></p></td>
+            <td><h2>Agent 2</h2><p id="strat2"></p></td>
+            <td><h2>Agent 3</h2><p id="strat3"></p></td>
+        </tr>
+    <tr>
+        <td><pre id="output1">Stats</pre></td>
+        <td><pre id="output2">Stats</pre></td>
+        <td><pre id="output3">Stats</pre></td>
+    </tr>
+    <tr>    
+        <td><canvas style="border:3px black solid;" id="sim_canvas1" width="1000" height="1000"></canvas></td>
+        <td><canvas style="border:3px black solid;" id="sim_canvas2" width="1000" height="1000"></canvas></td>
+        <td><canvas style="border:3px black solid;" id="sim_canvas3" width="1000" height="1000"></canvas></td>
+    </tr>
+    
+    </table>
     <script src="sim.js" type="text/javascript"></script>
     <script src="viz.js" type="text/javascript"></script>
 </html>
